# sol

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  imgui.ini
.github/instructions/: standard.instructions.md
plugins/example/: plugin.c
src/: main.c  main.cpp  sol.h
src/buffer/: buffer.c  cursor.c  piece_table.c
src/command/: command.c
src/config/: config.c
src/core/: application.cpp  application.h  arena.c  array.c  event_system.cpp  event_system.h  file.c  file_dialog.h  fuzzy.c  glob.c  hashmap.c  intern.c  job_system.cpp  job_system.h  logger.cpp  logger.h  path.c  resource_system.cpp  resource_system.h  time.c  utf8.c
src/core/lsp/: lsp_client.cpp  lsp_client.h  lsp_manager.cpp  lsp_manager.h  lsp_types.h
src/core/platform/: file_dialog_linux.cpp  file_dialog_macos.mm  file_dialog_windows.cpp  process.h  process_linux.cpp  process_macos.cpp  process_windows.cpp
src/core/terminal/: pty.h  pty_unix.cpp  terminal_emulator.cpp  terminal_emulator.h
src/core/text/: rope.cpp  rope.h  text_buffer.cpp  text_buffer.h  undo_tree.cpp  undo_tree.h
src/core/utils/: json.h
src/git/: git.c
src/highlight/: highlight.c
src/keybind/: flow.c  flow.h  keybind.c  keymap.c
src/lsp/: lsp.c
src/plugin/: plugin.c
src/terminal/: terminal.c  terminal_ui.c
src/theme/: theme.c
src/ui/: dialog.c  editor_settings.cpp  editor_settings.h  editor_view.c  file_picker.c  filetree.c  icons_nerd.h  keybindings.c  palette.c  panel.c  statusbar.c  tabbar.c  ui_system.cpp  ui_system.h  window_tree.cpp  window_tree.h
src/ui/input/: command.cpp  command.h  input_manager.cpp  input_manager.h  input_mode.cpp  input_mode.h  keybinding.cpp  keybinding.h  standard_mode.cpp  standard_mode.h  vim_mode.cpp  vim_mode.h
src/ui/layers/: buffer_panel.cpp  buffer_panel.h  explorer.cpp  explorer.h  main_window_layer.cpp  main_window_layer.h  menu_bar.cpp  menu_bar.h  menu_bar_layer.cpp  menu_bar_layer.h  panel.cpp  panel.h  settings.cpp  settings.h  status_bar.cpp  status_bar.h  terminal_panel.cpp  terminal_panel.h  workspace.cpp  workspace.h
src/ui/widgets/: explorer.cpp  explorer.h  syntax_editor.cpp  syntax_editor.h  telescope.cpp  telescope.h  terminal.cpp  terminal.h  terminal_panel.cpp  terminal_panel.h
src/undo/: undo_tree.c
src/vendors/: tree-sitter-grammars.cmake
src/view/: view.c
